--- a/README
+++ b/README
@@ -1,13 +1,29 @@
+NAME
+    Task::BeLike::Shantanu - All my default Modules in a perl installation
 
+VERSION
+    version 0.05
 
-This archive contains the distribution Task-BeLike-Shantanu,
-version 0.005:
+SUPPORT
+  Bugs / Feature Requests
+    Please report any bugs or feature requests through github at
+    <https://github.com/shantanubhadoria/task-belike-shantanu/issues>. You
+    will be notified automatically of any progress on your issue.
 
-  All my default Modules in a perl installation
+  Source Code
+    This is open source software. The code repository is available for
+    public review and contribution under the terms of the license.
 
-This software is copyright (c) 2012 by Shantanu Bhadoria.
+    <https://github.com/shantanubhadoria/task-belike-shantanu>
 
-This is free software; you can redistribute it and/or modify it under
-the same terms as the Perl 5 programming language system itself.
+      git clone git://github.com/shantanubhadoria/task-belike-shantanu.git
 
+AUTHOR
+    Shantanu Bhadoria <shantanu@cpan.org>
+
+COPYRIGHT AND LICENSE
+    This software is copyright (c) 2013 by Shantanu Bhadoria.
+
+    This is free software; you can redistribute it and/or modify it under
+    the same terms as the Perl 5 programming language system itself.
 
