Import of SHANTANU/Task-BeLike-Shantanu-0.07 from CPAN.
gitpan-cpan-distribution: Task-BeLike-Shantanu
gitpan-cpan-version:      0.07
gitpan-cpan-path:         SHANTANU/Task-BeLike-Shantanu-0.07.tar.gz
gitpan-cpan-author:       SHANTANU
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Task::BeLike::Shantanu - All my default Modules in a perl installation
 
 VERSION
-    version 0.06
+    version 0.07
 
 SUPPORT
   Bugs / Feature Requests
@@ -20,6 +20,9 @@ SUPPORT
 
 AUTHOR
     Shantanu Bhadoria <shantanu@cpan.org>
+
+CONTRIBUTOR
+    Shantanu <shantanu@cpan.org>
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2013 by Shantanu Bhadoria.
